--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -19,7 +19,8 @@
     "network": "^0.6.1",
     "next": "14.0.2",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sharp": "^0.33.1"
   },
   "devDependencies": {
     "@types/node": "^20",
