--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-router-dom": "^6.21.1",
     "sharp": "^0.33.1"
   },
   "devDependencies": {
